--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -34,7 +34,7 @@
         </RelativeLayout>
         <TextView android:layout_width="wrap_content"
                   android:textColor="@color/whiteColor"
-                  android:text="back"
+                  android:text="cancel"
                   android:paddingLeft="15dp"
                   android:paddingRight="15dp"
                   android:layout_height="40dp"
